test deploy from local

--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -6,7 +6,6 @@
 
 		<title>{{ page.title }}</title>
 
-
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -54,7 +53,7 @@
 	</head>
 
 	<body>
-
+		<!-- test -->
 		<div class="reveal">
 			<div class="slides">
 					{{ content }}
